# DynXX

./: .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/codeql/: codeql-config.yml
.github/pages/: index.html
.github/workflows/: Android-Mac.yml  Android-Ubuntu.yml  Android.yml  Base-Setup.yml  CI-Android-Mac.yml  CI-Android-Ubuntu.yml  CI-Android-Win.yml  CI-Android-Windows.yml  CI-Android-macOS.yml  CI-HarmonyOS-macOS.yml  CI-Linux-Ubuntu.yml  CI-OHOS-Mac.yml  CI-OHOS-Ubuntu.yml  CI-OHOS-Win.yml  CI-WASM-Mac.yml  CI-WASM-Ubuntu.yml  CI-WASM-Win.yml  CI-WASM-macOS.yml  CI-Windows-MSVC.yml  CI-Windows-Win.yml  CI-Windows.yml  CI-iOS-Mac.yml  CI-iOS.yml  CI-macOS-Mac.yml  CI-macOS.yml  CodeQL.yml  Deploy-Docs.yml  HarmonyOS-Mac.yml  Lint.yml  Linux-Ubuntu.yml  Linux.yml  MSVC.yml  MinGW.yml  WASM-Mac.yml  WASM-Ubuntu.yml  WASM-mac.yml  WASM-macOS.yml  WASM.yml  Win-MSVC.yml  Win-MinGW.yml  (+6 more)
build-tools/: CMakeLists.txt  build-Android.py  build-Android.sh  build-Android.ts  build-HarmonyOS.py  build-HarmonyOS.sh  build-HarmonyOS.ts  build-Linux.py  build-Linux.sh  build-Linux.ts  build-OHOS.ts  build-WASM.py  build-WASM.sh  build-WASM.ts  build-WebAssembly.sh  build-Windows.bat  build-Windows.ps1  build-Windows.ts  build-iOS.py  build-iOS.sh  build-iOS.ts  build-macOS.py  build-macOS.sh  build-macOS.ts  build-utils.sh  build_utils.py  gen-doc.ts  package.json  routes.ts  setup-custom-vcpkg.ts  setup-vcpkg.ts  utils.ts
cmake/: DynXX.cmake  cxx_features.cmake  dependencies.cmake  features.cmake  git.cmake  optimize.cmake  platforms.cmake  print.cmake  sanitizers.cmake  test.cmake  utils.cmake  wasm.cmake
include/: EngineXX.h  EngineXXLog.h  EngineXXLua.h  EngineXXNet.h  NGenXX.h  NGenXX.hxx  NGenXXCoding.h  NGenXXCoding.hxx  NGenXXCrypto.h  NGenXXCrypto.hxx  NGenXXDB.h  NGenXXDB.hxx  NGenXXDevice.h  NGenXXDevice.hxx  NGenXXDeviceInfo.h  NGenXXDeviceInfo.hxx  NGenXXJS.h  NGenXXJS.hxx  NGenXXJs.h  NGenXXJs.hxx  NGenXXJson.h  NGenXXJson.hxx  NGenXXJsonCodec.h  NGenXXJsonCodec.hxx  NGenXXJsonDecoder.h  NGenXXJsonDecoder.hxx  NGenXXKV.h  NGenXXKV.hxx  NGenXXLog.h  NGenXXLog.hxx  NGenXXLua.h  NGenXXLua.hxx  NGenXXMacro.h  NGenXXMacro.hxx  NGenXXNet.h  NGenXXNet.hxx  NGenXXNetHttp.h  NGenXXNetHttp.hxx  NGenXXStoreDB.h  NGenXXStoreKV.h  (+8 more)
include/DynXX/C/: Coding.h  Crypto.h  DB.h  Device.h  DynXX.h  JS.h  Json.h  KV.h  Log.h  Lua.h  Macro.h  Net.h  SQLite.h  Types.h  Zip.h
include/DynXX/CXX/: Coding.hxx  Crypto.hxx  DB.hxx  Device.hxx  DynXX.hxx  JS.hxx  Json.hxx  KV.hxx  Log.hxx  Lua.hxx  Macro.hxx  Memory.hxx  Net.hxx  SQLite.hxx  Types.hxx  Zip.hxx
scripts/JS/: DynXX.d.ts  DynXX.js  DynXX.ts  NGenXX.js  NGenXX.ts  WASM-Util.js  biz.js  biz.ts  tsconfig.json  wasm-util.js
scripts/JS/module/: module-def-private.js  module-def-public.js  module-load.js  module-use.js
scripts/JS/worker/: worker_client.js  worker_server.js
scripts/Lua/: DynXX.lua  NGenXX.lua  biz.lua  json.lua
src/: DynXX-C.cxx  DynXX-X.cxx  EngineXX.cxx  NGenXX-C.cxx  NGenXX-JS.cxx  NGenXX-JS.hxx  NGenXX-Js.cxx  NGenXX-Js.hxx  NGenXX-Lua.cxx  NGenXX-Lua.hxx  NGenXX-S.cxx  NGenXX-S.hxx  NGenXX-Script.cxx  NGenXX-Script.hxx  NGenXX-Types.hxx  NGenXX-X.cxx  NGenXX-inner.hxx  NGenXX.cxx
src/bridge/: BaseBridge.cxx  BaseBridge.hxx  JSBridge.cxx  JSBridge.hxx  JsBridge.cxx  JsBridge.hxx  LuaBridge.cxx  LuaBridge.hxx  ScriptAPI.cxx  ScriptAPI.hxx  ScriptBridge.cxx  ScriptBridge.hxx
src/coding/: Coding.cxx  Coding.hxx
src/core/coding/: Coding.cxx  Coding.hxx
src/core/concurrent/: ConcurrentUtil.hxx  Daemon.cxx  Daemon.hxx  Executor.cxx  Executor.hxx  Lock.cxx  Lock.hxx  TimerTask.cxx  TimerTask.hxx
src/core/crypto/: Crypto-OpenSSL.cxx  Crypto-WolfSSL.cxx  Crypto.hxx
src/core/device/: Device-android.cxx  Device-harmony.cxx  Device-ios.mm  Device-linux.cxx  Device-mac.mm  Device-ohos.cxx  Device-posix.hxx  Device-wasm.cxx  Device-windows.cxx  Device.hxx
src/core/json/: JsonCodec.cxx  JsonCodec.hxx
src/core/log/: Log.cxx  Log.hxx  Log.mm
src/core/net/: HttpClient-wasm.cxx  HttpClient-wasm.hxx  HttpClient.cxx  HttpClient.hxx  NetUtil-posix.cxx  NetUtil-win32.cxx  NetUtil-windows.cxx  NetUtil.hxx
src/core/store/: ConnPool.hxx  KV.cxx  KV.hxx  SQLite.cxx  SQLite.hxx
src/core/util/: ConcurrentUtil.cxx  ConcurrentUtil.hxx  ExportUtil.hxx  MacroUtil.hxx  MemUtil.hxx  TimeUtil.hxx  TypeUtil.hxx
src/core/vm/: BaseVM.cxx  BaseVM.hxx  JSVM.cxx  JSVM.hxx  LuaVM.cxx  LuaVM.hxx
src/core/zip/: Zip.cxx  Zip.hxx
src/crypto/: Crypto-OpenSSL.cxx  Crypto-WolfSSL.cxx  Crypto.cxx  Crypto.hxx
src/device/: DeviceInfo-android.cxx  DeviceInfo-harmony.cxx  DeviceInfo-ios.mm  DeviceInfo-linux.cxx  DeviceInfo-mac.mm  DeviceInfo-wasm.cxx  DeviceInfo-windows.cxx  DeviceInfo.hxx
src/js/: JsBridge.cxx  JsBridge.hxx
src/json/: JsonCodec.cxx  JsonCodec.hxx  JsonDecoder.cxx  JsonDecoder.hxx
src/log/: Log.cxx  Log.hxx
src/lua/: LuaBridge.cxx  LuaBridge.hxx
src/net/: HttpClient.cxx  HttpClient.hxx  NetUtil-posix.cxx  NetUtil-win32.cxx  NetUtil.cxx  NetUtil.hxx
src/store/: DB.cxx  DB.hxx  KV.cxx  KV.hxx  SQLite.cxx  SQLite.hxx
src/util/: ConcurrentUtil.hxx  JsonUtil.hxx  TimeUtil.hxx  TypeUtil.hxx
src/zip/: Zip.cxx  Zip.hxx
test/: CMakeLists.txt  Coding.test.cxx  Crypto.Aes.test.cxx  Crypto.Base64.test.cxx  Crypto.Hash.test.cxx  Crypto.Rsa.test.cxx  Crypto.test.cxx  Device.test.cxx  DynXX.test.cxx  DynXXTestMain.cxx  JS.test.cxx  Json.test.cxx  KV.test.cxx  Log.test.cxx  Lua.test.cxx  Memory.test.cxx  Net.test.cxx  SQLite.test.cxx  TestUtil.hxx  Zip.test.cxx
test/include/: DynXXTest.hxx
tools/: README.md  gen-doc.ts  package.json  routes.ts  setup-llvm.ts  setup-vcpkg.ts  utils.ts
tools/test/: coverage-utils.ts  gen-test-report.ts  gtest-utils.ts  test-utils.ts
